2001-05-15  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/mailq.c:
	    The 'mailq -v' did show the ta-work-specification-file
	    size, not message size in 'bytes %ld' printout.. :-(

	    Also:  Have options:  "-c channel -h host"
	    which TOGETHER will let querying of some particularly
	    interesting destination channel/host pair among all that
	    the system may have active.  Requires MAILQ-V2 mode, and
	    '-v' option use (not '-Q'!).

2001-05-10  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* include/libc.h:
	    Copy the 'GETNAMEINFOFLAGTYPE' test code into this
	    file too from  libc/getnameinfo.c.  Bloody Solaris..

2001-05-08  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* Makefile.in:
	    Version 2.99.55-patch1

	* transports/smtp/smtp.h, transports/smtp/smtp.c:
	    Reworking (simplifying) DATA phase processing,
	    and quick-retry handling of socket write/read
	    failure induced closes.  There is limit of three
	    attempts on any given host for the delivery before
	    giving up entirely.  (Passing the failure to the
	    scheduler..)

2001-05-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/cf/p-routes.cf:
	    Wrong function called to pick the flag data..

	* transports/smtp/smtp.c:
	    Fixup into pipelined error diagnostics accumulation methodology.

	* proto/newdbprocessor.in:
	    PERL 5.6.0+ specific syntax altered back to earlier syntax,
	    which even the lattest perl does support.

	* configure.in:  --with-zconfig-noload   option to disable
	    preloading of possibly existing ZCONFIG file contents
	    into configuration variables.

2001-04-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/getmxrr.c:
	    If destination has one MX, and lookup for its A yields
	    EAI_AGAIN, remember to report SS->mxcount = 0 ...

2001-04-03  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/forms/delivery:
	    Changed the URL reference to a "decode key" at